--- a/week4_technical.html
+++ b/week4_technical.html
@@ -33,6 +33,7 @@
 		<div id="menu">
 			<select name="menu" onChange="window.open(this.options[this.selectedIndex].value,'_parent')" align='middle'>
 				<option value="null">Menu</option>
+				<option value="week4_cultural_blog.html">Week 4: Cultural Blog</option>
 				<option value="../unit1_projects/week3_cultural_blog.html">Week 3: Cultural Blog</option>
 				<option value="../unit1_projects/week3_technical_blog.html">Week 3: Technical Blog</option>
  				<option value="../unit1_projects/week2_technical.html">Week 2: Technical Blog</option>
